htmls: Using new url names

--- a/trend_link/trend_link/templates/base.html
+++ b/trend_link/trend_link/templates/base.html
@@ -21,19 +21,19 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto" style="color: #800080;">
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'profile' user.id %}">Profile</a>
+                        <a class="nav-link" href="{% url 'view_profile' user.id %}">Profile</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'members' %}">Members</a>
+                        <a class="nav-link" href="{% url 'view_members' %}">Members</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'create-post' %}">Create Post</a>
+                        <a class="nav-link" href="{% url 'view_create_post' %}">Create Post</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'list-connectionreq' %}">Connection Requests</a>
+                        <a class="nav-link" href="{% url 'view_list_connection_requests' %}">Connection Requests</a>
                     </li>
                     <li class="nav-item">
-                        <form class="form-inline" method="post" action="{% url 'logout' %}">
+                        <form class="form-inline" method="post" action="{% url 'view_logout' %}">
                             {% csrf_token %}
                             <button class="btn btn-link nav-link" type="submit">Logout</button>
                         </form>
