--- a/trend_link/apps/connection/templates/connection/connection_reqs.html
+++ b/trend_link/apps/connection/templates/connection/connection_reqs.html
@@ -6,10 +6,10 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="{% static 'connection/js/connection_reqs.js' %}"
 defer
-data-get-connection-reqs-url="{% url 'list-connectionreq-api' %}" 
-data-accept-connection-url="{% url 'accept-connectionreq-api' 0 %}"
-data-reject-connection-url="{% url 'reject-connectionreq-api' 0 %}"
-data-profile-url="{% url 'profile' 0 %}"
+data-get-connection-reqs-url="{% url 'api_list_connection_requests' %}" 
+data-accept-connection-url="{% url 'api_accept_connection_request' 0 %}"
+data-reject-connection-url="{% url 'api_reject_connection_request' 0 %}"
+data-profile-url="{% url 'view_profile' 0 %}"
 ></script>
 {% endblock %}
 {% block content %}
